Not much progress, just wanted to push

--- a/python_project.ipynb
+++ b/python_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +60,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>School ID</th>\n",
        "      <th>Survey Year</th>\n",
        "      <th>Institution Name</th>\n",
        "      <th>State CD</th>\n",
@@ -79,6 +80,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>2016</td>\n",
        "      <td>University of Louisville</td>\n",
        "      <td>KY</td>\n",
@@ -96,6 +98,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>2016</td>\n",
        "      <td>University of Kentucky</td>\n",
        "      <td>KY</td>\n",
@@ -113,6 +116,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>2016</td>\n",
        "      <td>Indiana University-Bloomington</td>\n",
        "      <td>IN</td>\n",
@@ -133,30 +137,35 @@
        "</div>"
       ],
       "text/plain": [
-       "   Survey Year                Institution Name State CD  Classification Name  \\\n",
-       "0         2016        University of Louisville       KY  NCAA Division I-FBS   \n",
-       "1         2016          University of Kentucky       KY  NCAA Division I-FBS   \n",
-       "2         2016  Indiana University-Bloomington       IN  NCAA Division I-FBS   \n",
+       "   School ID  Survey Year                Institution Name State CD  \\\n",
+       "0          1         2016        University of Louisville       KY   \n",
+       "1          2         2016          University of Kentucky       KY   \n",
+       "2          3         2016  Indiana University-Bloomington       IN   \n",
        "\n",
-       "  Sanction Name  Total Men's Team Revenue  Total Women's Team Revenue  \\\n",
-       "0          NCAA                  87066830                     1723173   \n",
-       "1          NCAA                  65217902                     1626718   \n",
-       "2          NCAA                  62767976                      756377   \n",
+       "   Classification Name Sanction Name  Total Men's Team Revenue  \\\n",
+       "0  NCAA Division I-FBS          NCAA                  87066830   \n",
+       "1  NCAA Division I-FBS          NCAA                  65217902   \n",
+       "2  NCAA Division I-FBS          NCAA                  62767976   \n",
        "\n",
-       "   Not Allocated by Gender/Sport Revenue  Grand Total Revenue  \\\n",
-       "0                               33655301            122445304   \n",
-       "1                               55447093            122307014   \n",
-       "2                               41294985            104819338   \n",
+       "   Total Women's Team Revenue  Not Allocated by Gender/Sport Revenue  \\\n",
+       "0                     1723173                               33655301   \n",
+       "1                     1626718                               55447093   \n",
+       "2                      756377                               41294985   \n",
        "\n",
-       "   Men's Team Athletic Student Aid  Women's Team Athletic Student Aid  \\\n",
-       "0                          6249734                            5907156   \n",
-       "1                          7119237                            4874527   \n",
-       "2                          8487821                            7039065   \n",
+       "   Grand Total Revenue  Men's Team Athletic Student Aid  \\\n",
+       "0            122445304                          6249734   \n",
+       "1            122307014                          7119237   \n",
+       "2            104819338                          8487821   \n",
        "\n",
-       "   Male Undergraduates  Female Undergraduates  Total Undergraduates  \n",
-       "0                 5925                   6400                 12325  \n",
-       "1                 9420                  11352                 20772  \n",
-       "2                16085                  15799                 31884  "
+       "   Women's Team Athletic Student Aid  Male Undergraduates  \\\n",
+       "0                            5907156                 5925   \n",
+       "1                            4874527                 9420   \n",
+       "2                            7039065                16085   \n",
+       "\n",
+       "   Female Undergraduates  Total Undergraduates  \n",
+       "0                   6400                 12325  \n",
+       "1                  11352                 20772  \n",
+       "2                  15799                 31884  "
       ]
      },
      "execution_count": 13,
@@ -203,6 +212,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>school_id</th>\n",
        "      <th>survey_year</th>\n",
        "      <th>institution_name</th>\n",
        "      <th>state_cd</th>\n",
@@ -222,6 +232,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>2016</td>\n",
        "      <td>University of Louisville</td>\n",
        "      <td>KY</td>\n",
@@ -239,6 +250,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>2016</td>\n",
        "      <td>University of Kentucky</td>\n",
        "      <td>KY</td>\n",
@@ -256,6 +268,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>2016</td>\n",
        "      <td>Indiana University-Bloomington</td>\n",
        "      <td>IN</td>\n",
@@ -276,30 +289,35 @@
        "</div>"
       ],
       "text/plain": [
-       "   survey_year                institution_name state_cd  classification_name  \\\n",
-       "0         2016        University of Louisville       KY  NCAA Division I-FBS   \n",
-       "1         2016          University of Kentucky       KY  NCAA Division I-FBS   \n",
-       "2         2016  Indiana University-Bloomington       IN  NCAA Division I-FBS   \n",
+       "   school_id  survey_year                institution_name state_cd  \\\n",
+       "0          1         2016        University of Louisville       KY   \n",
+       "1          2         2016          University of Kentucky       KY   \n",
+       "2          3         2016  Indiana University-Bloomington       IN   \n",
        "\n",
-       "  sanction_name  total_men's_team_revenue  total_women's_team_revenue  \\\n",
-       "0          NCAA                  87066830                     1723173   \n",
-       "1          NCAA                  65217902                     1626718   \n",
-       "2          NCAA                  62767976                      756377   \n",
+       "   classification_name sanction_name  total_men's_team_revenue  \\\n",
+       "0  NCAA Division I-FBS          NCAA                  87066830   \n",
+       "1  NCAA Division I-FBS          NCAA                  65217902   \n",
+       "2  NCAA Division I-FBS          NCAA                  62767976   \n",
        "\n",
-       "   not_allocated_by_gender/sport_revenue  grand_total_revenue  \\\n",
-       "0                               33655301            122445304   \n",
-       "1                               55447093            122307014   \n",
-       "2                               41294985            104819338   \n",
+       "   total_women's_team_revenue  not_allocated_by_gender/sport_revenue  \\\n",
+       "0                     1723173                               33655301   \n",
+       "1                     1626718                               55447093   \n",
+       "2                      756377                               41294985   \n",
        "\n",
-       "   men's_team_athletic_student_aid  women's_team_athletic_student_aid  \\\n",
-       "0                          6249734                            5907156   \n",
-       "1                          7119237                            4874527   \n",
-       "2                          8487821                            7039065   \n",
+       "   grand_total_revenue  men's_team_athletic_student_aid  \\\n",
+       "0            122445304                          6249734   \n",
+       "1            122307014                          7119237   \n",
+       "2            104819338                          8487821   \n",
        "\n",
-       "   male_undergraduates  female_undergraduates  total_undergraduates  \n",
-       "0                 5925                   6400                 12325  \n",
-       "1                 9420                  11352                 20772  \n",
-       "2                16085                  15799                 31884  "
+       "   women's_team_athletic_student_aid  male_undergraduates  \\\n",
+       "0                            5907156                 5925   \n",
+       "1                            4874527                 9420   \n",
+       "2                            7039065                16085   \n",
+       "\n",
+       "   female_undergraduates  total_undergraduates  \n",
+       "0                   6400                 12325  \n",
+       "1                  11352                 20772  \n",
+       "2                  15799                 31884  "
       ]
      },
      "execution_count": 15,
@@ -313,37 +331,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "DatabaseError",
+     "evalue": "file is not a database",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mDatabaseError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-0538a37134c2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcur\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mcur\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"CREATE TABLE revenue(school_id INTEGER FOREIGN KEY, institution_name TEXT, grand_total_revenue INTEGER)\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDatabaseError\u001b[0m: file is not a database"
+     ]
+    }
+   ],
+   "source": [
+    "cur = db.cursor()\n",
+    "cur.execute(\"CREATE TABLE revenue(school_id INTEGER FOREIGN KEY, institution_name TEXT, grand_total_revenue INTEGER)\")\n",
+    "db.commit()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Survey Year                               int64\n",
-       "Institution Name                         object\n",
-       "State CD                                 object\n",
-       "Classification Name                      object\n",
-       "Sanction Name                            object\n",
-       "Total Men's Team Revenue                  int64\n",
-       "Total Women's Team Revenue                int64\n",
-       "Not Allocated by Gender/Sport Revenue     int64\n",
-       "Grand Total Revenue                       int64\n",
-       "Men's Team Athletic Student Aid           int64\n",
-       "Women's Team Athletic Student Aid         int64\n",
-       "Male Undergraduates                       int64\n",
-       "Female Undergraduates                     int64\n",
-       "Total Undergraduates                      int64\n",
+       "survey_year                               int64\n",
+       "institution_name                         object\n",
+       "state_cd                                 object\n",
+       "classification_name                      object\n",
+       "sanction_name                            object\n",
+       "total_men's_team_revenue                  int64\n",
+       "total_women's_team_revenue                int64\n",
+       "not_allocated_by_gender/sport_revenue     int64\n",
+       "grand_total_revenue                       int64\n",
+       "men's_team_athletic_student_aid           int64\n",
+       "women's_team_athletic_student_aid         int64\n",
+       "male_undergraduates                       int64\n",
+       "female_undergraduates                     int64\n",
+       "total_undergraduates                      int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -363,18 +397,18 @@
        "str"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(df['Institution Name'][0])"
+    "type(df['institution_name'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -383,18 +417,18 @@
        "numpy.int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(df[\"Total Men's Team Revenue\"][0])"
+    "type(df[\"total_men's_team_revenue\"][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -403,18 +437,18 @@
        "numpy.int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(df['Grand Total Revenue'][0])"
+    "type(df['grand_total_revenue'][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -424,20 +458,20 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 3 entries, 0 to 2\n",
       "Data columns (total 14 columns):\n",
-      "Survey Year                              3 non-null int64\n",
-      "Institution Name                         3 non-null object\n",
-      "State CD                                 3 non-null object\n",
-      "Classification Name                      3 non-null object\n",
-      "Sanction Name                            3 non-null object\n",
-      "Total Men's Team Revenue                 3 non-null int64\n",
-      "Total Women's Team Revenue               3 non-null int64\n",
-      "Not Allocated by Gender/Sport Revenue    3 non-null int64\n",
-      "Grand Total Revenue                      3 non-null int64\n",
-      "Men's Team Athletic Student Aid          3 non-null int64\n",
-      "Women's Team Athletic Student Aid        3 non-null int64\n",
-      "Male Undergraduates                      3 non-null int64\n",
-      "Female Undergraduates                    3 non-null int64\n",
-      "Total Undergraduates                     3 non-null int64\n",
+      "survey_year                              3 non-null int64\n",
+      "institution_name                         3 non-null object\n",
+      "state_cd                                 3 non-null object\n",
+      "classification_name                      3 non-null object\n",
+      "sanction_name                            3 non-null object\n",
+      "total_men's_team_revenue                 3 non-null int64\n",
+      "total_women's_team_revenue               3 non-null int64\n",
+      "not_allocated_by_gender/sport_revenue    3 non-null int64\n",
+      "grand_total_revenue                      3 non-null int64\n",
+      "men's_team_athletic_student_aid          3 non-null int64\n",
+      "women's_team_athletic_student_aid        3 non-null int64\n",
+      "male_undergraduates                      3 non-null int64\n",
+      "female_undergraduates                    3 non-null int64\n",
+      "total_undergraduates                     3 non-null int64\n",
       "dtypes: int64(10), object(4)\n",
       "memory usage: 416.0+ bytes\n"
      ]
@@ -445,6 +479,23 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%sql` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
